@@ -25,7 +25,7 @@
     <validation.api.version>2.0.2</validation.api.version>
 
     <EXTRA_TEST_OPTS></EXTRA_TEST_OPTS>
-    <!-- EXTRA_TEST_OPTS>--add-opens java.base/java.lang=ALL-UNNAMED</EXTRA_TEST_OPTS-->
+    <!-- EXTRA_TEST_OPTS> - -add-opens java.base/java.lang=ALL-UNNAMED</EXTRA_TEST_OPTS -->
   </properties>
 
   <modules>
